# eol-tool

./: .coverage  .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  cc-prompt-01-input-filter.txt  cc-prompt-02-generic-optics.txt  cc-prompt-03-known-unknowns.txt  cc-prompt-04-overrides-ui.txt  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/: eol_models_cleaned.xlsx  generation_dates.csv  last_run.json  manual_overrides.csv  prev_run.json
frontend/: index.html
scripts/: discover_slugs.py
src/eol_tool/: __init__.py  _paths.py  api.py  cache.py  check_pipeline.py  checker.py  cli.py  diff.py  generation_dates.py  health.py  input_filter.py  manufacturer_corrections.py  models.py  normalizer.py  notifier.py  paths.py  reader.py  registry.py  retry.py  scheduler.py
tests/: conftest.py  test_api.py  test_api_health.py  test_api_overrides.py  test_api_status.py  test_cache.py  test_cli.py  test_date_coverage.py  test_diff.py  test_endoflife_date_expansion.py  test_health.py  test_input_filter.py  test_juniper_date_propagation.py  test_manual_unknowns.py  test_manufacturer_corrections.py  test_manufacturer_detection.py  test_models.py  test_normalizer.py  test_notifier.py  test_paths.py  test_reader.py  test_registry.py  test_release_dates.py  test_retry.py  test_retry_unknowns.py  test_scheduler.py  test_update.py
tests/fixtures/: README.md
tests/test_checkers/: test_amd.py  test_arista.py  test_asrock.py  (+42 more)
(+63 files in other folders)
