[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eol-tool"
version = "2.3.0"
requires-python = ">=3.11"
dependencies = [
    "httpx[http2]",
    "beautifulsoup4",
    "lxml",
    "openpyxl",
    "click",
    "pydantic>=2.0",
    "aiosqlite",
]

[project.optional-dependencies]
scrapers = [
    "playwright>=1.40.0",
]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-multipart>=0.0.6",
    "playwright>=1.40.0",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-httpx",
    "pytest-timeout",
    "httpx",
    "ruff",
]

[project.scripts]
eol-tool = "eol_tool.cli:cli"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "playwright: tests that require playwright (skipped when playwright is not installed)",
]
